--- a/testweb.ipynb
+++ b/testweb.ipynb
@@ -225,7 +225,7 @@
     "              \n",
     "             \n",
     "              #res = model.predict(np.expand_dims(sequence, axis=0))[0]\n",
-    "              res = model.predict(np.array(sequence).reshape(1, (np.array(sequence).shape[0]*np.array(sequence).shape[1])))[0]\n",
+    "              res = model.predict_proba(np.array(sequence).reshape(1, (np.array(sequence).shape[0]*np.array(sequence).shape[1])))[0]\n",
     "                \n",
     "              print(actions[np.argmax(res)])\n",
     "              \n",
