--- a/testweb.ipynb
+++ b/testweb.ipynb
@@ -2193,7 +2193,7 @@
     "from tensorflow import keras\n",
     "import pickle\n",
     "import joblib\n",
-    "app = Flask(__name__,template_folder= 'MP_Data/templates')\n",
+    "app = Flask(__name__,template_folder= 'templates')\n",
     "model = loaded_model = pickle.load(open('random1200.pkl', 'rb'))\n",
     "#model = keras.models.load_model('actionpro1.h5',compile = False)\n",
     "#actions = np.array(['hello','bye','thanks', 'please','namaste','yes','no'])\n",
@@ -2209,7 +2209,7 @@
     "@app.route('/', methods=[\"POST\",'GET'])\n",
     "def index():\n",
     "    \"\"\"Video streaming home page.\"\"\"\n",
-    "    return render_template('index.html')\n",
+    "    return render_template('index1.html')\n",
     "def mediapipe_detection(image, model):\n",
     "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB) # COLOR CONVERSION BGR 2 RGB\n",
     "    image.flags.writeable = False                  # Image is no longer writeable\n",
